fix list-item align-top

--- a/src/components/list/style.less
+++ b/src/components/list/style.less
@@ -22,7 +22,7 @@
         }
     }
 
-    .align-top, .align-top .item-content, .align-top .item-inner {
+    .align-top.item-content, .align-top .item-inner {
         .align-items(flex-start);
     }
 
